# AI_CUP_2023_Spring_Computer_Vision

./: .gitignore  README.md  extract_hit_frames.py  organize_answer.py  organize_answer_with_ballHeight.py  pyproject.toml
configs/mmpose/: td-hm_hrnet-w48_8xb32-210e_coco-384x288.py  td-hm_hrnet-w48_8xb32-210e_coco-wholebody-384x288.py
court_detection/: detect.py  process_dataset.py  utils.py
experiments/court_detection/: colorbrewer.py  corner_detect.ipynb  lab.ipynb  utils.py
experiments/player_pose_estimation/: court.csv  player_pose_estimation_image.ipynb  player_pose_estimation_video.ipynb
experiments/shuttlecock_tracking/: lab.ipynb  trajectory.csv
experiments/trajectory_tracking/: lab.ipynb  trajectory.csv
runs/detect/train/: args.yaml  results.csv
shuttlecock_tracking/: process_dataset.py  smooth_trajectory.py
src/ball_height_detector/: dataset.py  model.py  process_dataset.py  train.py  utils.py
src/court_detector/: detect.py  process_dataset.py  utils.py
src/hit_detector/: dataset.py  detect.py  model.py  organize_xy.py  process_dataset.py  train.py  utils.py
src/player_backhand_detector/: config.yaml  dataset.py  model.py  process_dataset.py  train.py
src/player_location_detector/: detect.py
src/player_pose_estimator/: predict.py  process_dataset.py  utils.py
src/player_roundhead_detector/: dataset.py  mmskl_dataset.py  model.py  process_dataset.py  train.py
src/shot_type_classifier/: dataset.py  model.py  process_dataset.py  train.py
src/shuttlecock_tracker/: predict.py  process_dataset.py
tracknet/: TrackNet3.py  predict.py
(+2 files in other folders)
